OnboardingV2Minimal/force-app/main/default/objects/Recipient_Group__c/Recipient_Group__c.object-meta.xml
<CustomObject>
    <description>Represents a reusable collection of Users or Contacts grouped for targeting communication, access, or configuration purposes. Each Recipient Group can be linked to one or more business contexts (e.g., Vendor Programs) through versioned associations.</description>
    <label>Recipient Group</label>
    <nameField>
        <label>Recipient Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recipient Group</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>