OnboardingV2Minimal/force-app/main/default/objects/Recipient_Group__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Internal use explanation</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>