OnboardingV2Minimal/force-app/main/default/objects/Recipient_Group__c/fields/Group_Type__c.field-meta.xml
<CustomField>
    <fullName>Group_Type__c</fullName>
    <label>Group Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Member_Type</valueSetName>
    </valueSet>
</CustomField>