OnboardingV2Minimal/force-app/main/default/objects/Recipient_Group__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Allows groups to be disabled</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>